created the header of the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="HeaderAndHero">
         <div class="Header">
-            <div>Header Logo</div>
+            <div class="logo">Header Logo</div>
             <div class="Hlinks">
                 <a href="#">header link one</a>
                 <a href="#">header link two</a>
@@ -18,8 +18,8 @@
         </div>
         <div class="Hero">
             <div class="TextAndButton">
-                <div>This website is awesome</div>
-                <div>this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+                <div class="main">This website is awesome</div>
+                <div class="secondary">this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
             <img src="" alt="this is place holder for an image">
