--- a/index.html
+++ b/index.html
@@ -22,7 +22,28 @@
                 <div class="secondary">this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="this is place holder for an image">
+            <img src="https://picsum.photos/400/200" alt="this is place holder for an image">
+        </div>
+    </div>
+    <div class="information">
+        <p class="heading">Some random information</p>
+        <div class="imgAndSubtext">
+            <div class="one">
+                <img src="https://picsum.photos/100" alt="placeholer img">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="two">
+                <img src="https://picsum.photos/100" alt="placeholer img">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="three">
+                <img src="https://picsum.photos/100" alt="placeholer img">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="four">
+                <img src="https://picsum.photos/100" alt="placeholer img">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
 </body>
