Quote section added

--- a/index.html
+++ b/index.html
@@ -46,5 +46,13 @@
             </div>
         </div>
     </div>
+    <div class="Qoutes">
+        <p class="qoute">
+            Programming today is a race between software engineers striving to build bigger and better idiot-proof programs, and the Universe trying to produce bigger and better idiots. So far, the Universe is winning.
+        </p>
+        <p class="author">
+            ― Rick Cook, The Wizardry Compiled
+        </p>
+    </div>
 </body>
 </html>
