--- a/index.html
+++ b/index.html
@@ -54,5 +54,10 @@
             ― Rick Cook, The Wizardry Compiled
         </p>
     </div>
+    <div class="callToAction">
+        <h3>Call to action! It's time!</h3>
+        <span>Sign up for our product by clicking that button right over there!</span>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
