--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
         <span>Sign up for our product by clicking that button right over there!</span>
         <button>Sign up</button>
     </div>
+    <div class="footer">
+        Copyright © The Odin Project 2024
+    </div>
 </body>
 </html>
